# hackathon-physical-ai---robotics-book

./: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  CLEANUP-COMPLETE.md  COMPLETE-SETUP-GUIDE.md  FINAL-STATUS.md  FINALIZED-PROJECT.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  MCP-SETUP-GUIDE.md  PHASE1-COMPLETION-GUIDE.md  PROGRESS-SUMMARY.md  QUICK-START.md  README.md  SETUP-COMPLETE.md  docusaurus.config.ts  mcp-config-sample.json  package-lock.json  package.json  railway.toml  sidebars.ts
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  =4.0.0  AGENT-RAG-README.md  Dockerfile  Dockerfile.huggingface  HUGGINGFACE-DEPLOYMENT.md  README.md  TEST-GUIDE.md  app.py  check_vectors.py  debug_search.py  deploy-to-huggingface.bat  final_debug.py  pytest.ini  requirements.txt  setup_database.py  test_config.py
backend/embedding-pipeline/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  retrieval_test.py  verify.py
backend/embedding-pipeline/tests/: __init__.py
backend/migrations/: env.py
backend/src/: __init__.py  ai_client.py  config.py  database.py  main.py  vector_store.py
docs/: chapters-config.json  chatbot.mdx  hackathon-requirements.md
docs/chapter-1/: installation.md  intro.md  urdf-basics.md  what-is-ros2.md  why-ros2.md
docs/chapter-2/: intro.md  what-is-gazebo.md
docs/chapter-3/: intro.md  what-is-vla.md
specs/001-rag-chatbot-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-chapter1/: plan.md  (+3 more)
(+176 files in other folders)
